chore: Show aliases in output, use alias for default install dir